# slam_controller

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: slam_controller.yaml
docs/: MAP_MANAGEMENT.md  list_maps_service.md  map_tasks_service.md  nav_tasks_file.md  navigation_service.md  process_map_service.md
launch/: slam_manager.launch
scripts/: run_slam_manager.sh  slam_manager.py  srv_handlers.py  utils.py
srv/: GetMapTasks.srv  GetSlamStatus.srv  ListMaps.srv  ProcessMap.srv  SetMapTasks.srv  StartMapping.srv  StartNavigation.srv  StopMapping.srv  StopNavigation.srv
